[gd_scene load_steps=15 format=2]

[ext_resource path="res://Entities/Enemies/Spider/spider.png" type="Texture" id=1]
[ext_resource path="res://Entities/Enemies/EffectsAnimation.tscn" type="PackedScene" id=2]
[ext_resource path="res://Entities/Enemies/PlayerDetectionZone.tscn" type="PackedScene" id=4]
[ext_resource path="res://Entities/Enemies/Controller.tscn" type="PackedScene" id=5]
[ext_resource path="res://Entities/Enemies/Spider/Spider.gd" type="Script" id=6]
[ext_resource path="res://Entities/Hitbox.tscn" type="PackedScene" id=7]
[ext_resource path="res://Entities/Enemies/EffectFSM.gd" type="Script" id=8]
[ext_resource path="res://Entities/Enemies/EnemyHurtbox.tscn" type="PackedScene" id=9]
[ext_resource path="res://Entities/Enemies/Spider/SpiderFSM.gd" type="Script" id=10]
[ext_resource path="res://Entities/Stats.tscn" type="PackedScene" id=11]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 20.5114, 11.4569 )

[sub_resource type="CircleShape2D" id=2]
radius = 51.3335

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 16.25, 12.4552 )

[sub_resource type="CircleShape2D" id=4]
radius = 24.279

[node name="Spider" type="KinematicBody2D"]
collision_layer = 4
script = ExtResource( 6 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.58, 0.5 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -7.15256e-06, -0.0618514 )
shape = SubResource( 1 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 10 )

[node name="Stats" parent="." instance=ExtResource( 11 )]
max_health = 200

[node name="EffectFSM" type="Node" parent="."]
script = ExtResource( 8 )

[node name="Controller" parent="." instance=ExtResource( 5 )]

[node name="Timer" parent="Controller" index="0"]
wait_time = 2.0

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 4 )]
visible = false

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
position = Vector2( 0.375412, 0.37458 )
shape = SubResource( 2 )

[node name="Hitbox" parent="." instance=ExtResource( 7 )]
visible = false
position = Vector2( -13.8593, -2.24746 )
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( 0, 1.12373 )
shape = SubResource( 3 )

[node name="EnemyHurtbox" parent="." instance=ExtResource( 9 )]
visible = false
effected_by = [ true, true, true, true, false ]

[node name="CollisionShape2D" parent="EnemyHurtbox" index="0"]
shape = SubResource( 4 )

[node name="EffectsAnimation" parent="." instance=ExtResource( 2 )]
[connection signal="immobilized" from="Stats" to="StateMachine" method="_on_Stats_immobilized"]
[connection signal="no_health" from="Stats" to="StateMachine" method="_on_Stats_no_health"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
[connection signal="area_exited" from="Hitbox" to="." method="_on_Hitbox_area_exited"]

[editable path="Controller"]

[editable path="PlayerDetectionZone"]

[editable path="Hitbox"]

[editable path="EnemyHurtbox"]
